<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="25sp"
            tools:ignore="RtlCompat" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_emailLoginField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_LoginLogInField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true"
            app:met_minCharacters="7"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>